<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.grab4.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.grab4.ui.aktivitas.AktivitasFragment"
        android:label="@string/title_aktivitas"
        tools:layout="@layout/fragment_aktivitas" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.grab4.ui.pembayaran.PembayaranFragment"
        android:label="@string/title_pembayaran"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_kontak"
        android:name="com.example.grab4.ui.kontak.KontakFragment"
        android:label="@string/title_kontak"
        tools:layout="@layout/fragment_kontak" />

    <fragment
        android:id="@+id/navigation_akun"
        android:name="com.example.grab4.ui.akun.AkunFragment"
        android:label="@string/title_akun"
        tools:layout="@layout/fragment_akun" />


</navigation>