<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="50dp"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/scanner"
                    android:background="@drawable/background_putih"
                    android:padding="8dp"/>
                <EditText
                    android:id="@+id/editTextText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:hint="@string/searchbar_hint"
                    android:paddingStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:drawableStart="@drawable/search_30"
                    android:drawablePadding="10dp"
                    android:background="@drawable/background_putih" />
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_menu1"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="16dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_menu2"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rekomendasi_restoren_untukmu"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:layout_marginTop="16dp"
                android:drawableEnd="@drawable/arrow_kanan"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_menu3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pesan_cemilan_dari"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:layout_marginTop="16dp"
                android:drawableEnd="@drawable/arrow_kanan"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_menu4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>